[package]
name = "domain_changer"
version = "0.1.0"
edition = "2021"
authors = ["TheAwiteb <awiteb@hotmail.com>"]
keywords = ["domain", "privacy", "changer", "domain-changer"]
license = "AGPL-3.0-only"
homepage = "https://github.com/TheAwiteb/domain_changer"
repository = "https://github.com/TheAwiteb/domain_changer.git"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.2.2"