[package]
name = "domain_changer"
version = "0.1.2"
edition = "2021"
authors = ["TheAwiteb <awiteb@hotmail.com>"]
keywords = ["domain", "privacy", "changer", "domain-changer"]
license = "AGPL-3.0-only"
homepage = "https://github.com/TheAwiteb/domain_changer"
repository = "https://github.com/TheAwiteb/domain_changer.git"
documentation = "https://docs.rs/domain_changer/latest/domain_changer/"
readme = "README.md"
description = "Rust library that helps you change the domain of the link to another domain"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.2.2"
serde = {version = "1.0.136", features = ["derive"], optional = true}
serde_json = {version = "1.0.79", optional = true}

[features]
json = ["serde", "serde_json", "url/serde"]
